crates/python_parser/tests/snapshots/invalid_syntax@expressions__named__missing_expression_1.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/named/missing_expression_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..33,
        body: [
            Expr(
                ExprStmt {
                    range: 28..33,
                    value: Named(
                        NamedExpr {
                            range: 29..33,
                            target: Name(
                                NameExpr {
                                    range: 29..30,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            value: Name(
                                NameExpr {
                                    range: 33..33,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # EOF after the `:=` token
2 | 
3 | (x :=
  |       Syntax Error: unexpected EOF while parsing
  |
